--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "setup-data": "tsx scripts/setup-sample-data.ts"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@types/diff": "^8.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "diff": "^8.0.2",
     "lucide-react": "^0.424.0",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
